Fix: navigation bar is not centered on safari

--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -7,6 +7,8 @@ nav {
     backdrop-filter: blur(3px);
     position: sticky;
     top: 0;
+    display: flex;
+    justify-content: center;
 }
 
 .links {
